tests/baselines/reference/expandoFunctionContextualTypesJSDocInTs.errors.txt
tests/cases/compiler/expandoFunctionContextualTypesJSDocInTs.ts(2,17): error TS2307: Cannot find module 'blah' or its corresponding type declarations.


==== tests/cases/compiler/expandoFunctionContextualTypesJSDocInTs.ts (1 errors) ====
    // GH #38532
    import Foo from "blah";
                    ~~~~~~
!!! error TS2307: Cannot find module 'blah' or its corresponding type declarations.
    
    export function Foo() { }
    
    // This comment should have no effect; this is a TS file.
    /** @type {never} */
    Foo.bar = () => { };
    